# virt-backend

./: Cargo.toml
src/: controller.rs  db.rs  main.rs  middleware.rs  scheduler.rs  test.rs  virt.rs
src/controller/: account.rs  snapshot.rs  sys.rs  sysinfo.rs  virt.rs  vnc.rs  ws.rs
src/db/entity/: domains.rs  mod.rs  prelude.rs  schedule_jobs.rs  user.rs
src/middleware/: authenticate.rs
src/test/: virt.rs
src/virt/: conn.rs  list.rs  shell.rs  sys.rs  utils.rs
