[package]
name = "virt-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.1.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenvy = "0.15"
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-json" ] }
futures = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
bcrypt = "0.15.0"
virt = "0.3.1"
roxmltree = "0.19.0"
