[package]
name = "virt-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.1.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenvy = "0.15"
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-json" ] }
futures = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
bcrypt = "0.15.0"
virt = "0.3.1"
time = { version = "^0.3" }
roxmltree = "0.19.0"
sysinfo = "0.30.5"
thiserror = "1.0.58"
quick-xml = "0.31.0"
ring = "0.17.8"
data-encoding = "2.5.0"
rocket_ws = "0.1.0"
